--- a/posts/2018-02-25.md
+++ b/posts/2018-02-25.md
@@ -6,7 +6,7 @@ Despite what you might guess, I actually think there is a fair bit to like in th
 
 Unfortunately, the paper has several issues. [Literal](https://github.com/uber/sql-differential-privacy/issues/1) [issues](https://github.com/sunblaze-ucb/elastic-sensitivity-experiments/issues), but also some higher-level issues. I think these issues can be fixed, but I also think they *should have been* fixed. It is too bad that VLDB published the paper as it is, but perhaps the issues can be addressed before the paper is presented (or perhaps the authors can float this post in their presentation, and talk some serious smack while explaining my errors).
 
-Let me start be re-iterating that the core ideas in the paper are sound. I think they are good, even (which if you know me, I DO NOT EVER SAY). The implementation and evaluation seem to me to be a bit of a shambles, and any conclusions about the merit of the work are left in a great cloud of doubt.
+Let me start by re-iterating that the core ideas in the paper are sound. I think they are good, even (which if you know me, I DO NOT EVER SAY). The implementation and evaluation seem to me to be a bit of a shambles, and any conclusions about the merit of the work are left in a great cloud of doubt.
 
 The highest level issues are:
 
@@ -92,9 +92,9 @@ There are some issues with this definition.
 
 The paper *doesn't* return counts in the clear, but it is a fairly big problem that their formal guarantees do not preclude it.
 
-The fix, introded in the PINQ paper, is to use multisets of records, rather than n-tuples of records. You should think of your dataset as a function from records to integer counts (or real-valued counts, if you use wPINQ), rather than a sequence of n records.
+The fix, introduced in the PINQ paper, is to use multisets of records, rather than n-tuples of records. You should think of your dataset as a function from records to integer counts (or real-valued counts, if you use wPINQ), rather than a sequence of n records.
 
-This change alters the privacy guarantee. Each *change* to a multiset is an addition or a removal. It would take two such changes to effect one change in the prior definition, so in a sense the new guarantee is weaker by a factor of two. You recover this factor of two when you look at how much noise you need to add to queries (in their paper, the "elastic sensivity" of histogram queries can remove its factor of two).
+This change alters the privacy guarantee. Each *change* to a multiset is an addition or a removal. It would take two such changes to effect one change in the prior definition, so in a sense the new guarantee is weaker by a factor of two. You recover this factor of two when you look at how much noise you need to add to queries (in their paper, the "elastic sensitivity" of histogram queries can remove its factor of two).
 
 On the positive side, you actually protect the number of records in the dataset, and now have an internally consistent formalism that can reason about filters and joins.
 
@@ -132,7 +132,7 @@ Queries 13 and 21 are also off by 100x, but their values were at least plausible
 
 #### Query 16
 
-The results for Query 16 are almost certainly doubly incorrect, because the authors mis-calculate the sensivity of the query. By "doubly" I mean "a further factor of 80".
+The results for Query 16 are almost certainly doubly incorrect, because the authors mis-calculate the sensitivity of the query. By "doubly" I mean "a further factor of 80".
 
 Query 16 asks (roughly): "for each part, how many suppliers without customer complaints supply the part?" It is a bit more involved, because we only ask this for a subset of parts, and then accumulate parts by (brand, type, size). However, the `parts` relation is treated as public, and the only issue lies in the determination of the above query.
 
@@ -163,7 +163,7 @@ I don't know what the results for query 4 will look like if the authors need to 
 
 #### Using prior work
 
-Let's quicky blast out some numbers for the queries using techniques from prior work. I'm going to compare PINQ, wPINQ, and "just report zero" with the reported and corrected accuracies for each of the TPC-H queries. I'm going to use relative error, rather than percent error, so "just report zero" is simply the number 1.
+Let's quickly blast out some numbers for the queries using techniques from prior work. I'm going to compare PINQ, wPINQ, and "just report zero" with the reported and corrected accuracies for each of the TPC-H queries. I'm going to use relative error, rather than percent error, so "just report zero" is simply the number 1.
 
 The PINQ and wPINQ numbers are from just one run of the computation, rather than 100 runs as the authors do. If anyone wants to get on my case about statistical fidelity, feel free. I think there may be a queue.
 
